--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,26 +1,26 @@
 @charset "UTF-8";
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100&display=swap");
 
 /*
  * -------------------------------
  * 全体
  * -------------------------------
  */
- 
+
 body {
   color: #000;
   background-color: #fff;
-  font-family: 'Noto Sans JP', sans-serif; 
+  font-family: "Noto Sans JP", sans-serif;
   /*画面の最小幅を指定(iphone5 SEと同じ)*/
-  min-width:320px;
+  min-width: 320px;
 }
 
 /* インナー */
 .inner {
-  padding : 0 25px;
+  padding: 0 25px;
 }
 
-/*ローディング画面*/ 
+/*ローディング画面*/
 #loading {
   /* 画面一杯にローディング画面を広げる */
   height: 100%;
@@ -48,25 +48,25 @@ body {
 }
 
 /*トップに戻るボタン*/
-#page_top{
-    display: none;
-    position: fixed;
-    right: 15px;
-    bottom: 15px;
+#page_top {
+  display: none;
+  position: fixed;
+  right: 15px;
+  bottom: 15px;
 }
-#page_top a{
-    display: block;
-    font-size: 0;
-    width: 50px;
-    height: 50px;
-    text-align: center;
-    background: #7db4e6;
-    border-radius: 50%;
-    line-height: 65px;
+#page_top a {
+  display: block;
+  font-size: 0;
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  background: #7db4e6;
+  border-radius: 50%;
+  line-height: 65px;
 }
-.top-back-icon{
-    font-size: 25px;
-    color:#fff;
+.top-back-icon {
+  font-size: 25px;
+  color: #fff;
 }
 
 /*
@@ -83,8 +83,9 @@ body {
 }
 
 /* 文字の切り替え時間 */
-.c--anim-btn, .c-anim-btn {
-  transition: 0.3s;     
+.c--anim-btn,
+.c-anim-btn {
+  transition: 0.3s;
 }
 
 .c--anim-btn {
@@ -95,17 +96,17 @@ body {
 }
 
 /* hover前後でmargin-topの値を切り替えることで、文字の切り替えをする */
-.c-anim-btn{
-  margin-top: -1em;   
+.c-anim-btn {
+  margin-top: -1em;
 }
 
 /* hover時に文字切り替え */
-.c--anim-btn:hover .c-anim-btn{
+.c--anim-btn:hover .c-anim-btn {
   margin-top: -4.5em;
 }
 
 .navbar-toggler:focus {
-  outline:none!important;
+  outline: none !important;
 }
 
 .top {
@@ -132,6 +133,9 @@ body {
 
   /* videoの幅を指定 */
   width: 100%;
+
+  /* 画像/ビデオの下余白を消す対応 */
+  vertical-align: top;
 }
 
 .top__overlay {
@@ -140,10 +144,14 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  background-image: linear-gradient(45deg, rgba(0,0,0,.2) 50%, rgba(0,0,0,.1) 50%);
+  background-image: linear-gradient(
+    45deg,
+    rgba(0, 0, 0, 0.2) 50%,
+    rgba(0, 0, 0, 0.1) 50%
+  );
   background-size: 3px 3px;
   /*ビデオよりも上に指定*/
-  z-index: 2; 
+  z-index: 2;
 }
 
 .top__text-box {
@@ -163,24 +171,24 @@ body {
 .top__title {
   font-size: 3rem;
   letter-spacing: 2px;
-  color:#e8e8e8;
+  color: #e8e8e8;
 }
 
 .top__catchphrase {
   font-size: 1.5rem;
   margin: 5px 0px;
-  color:#e8e8e8;
+  color: #e8e8e8;
 }
 
 /* トップのアイコン(下矢印) */
 .top__icon {
-  color:#e8e8e8;
+  color: #e8e8e8;
 }
 
 /*position.scssの.fixed-topを上書き*/
 .fixed-top {
   /*ナビゲーションバー下に影をつける*/
-  box-shadow: 0px 10px 15px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 10px 15px 0px rgba(0, 0, 0, 0.2);
 }
 
 /*
@@ -192,9 +200,9 @@ body {
 .about {
   padding-top: 82px;
   padding-bottom: 92px;
-  max-width:500px;
-  width:100%;
-  margin:0 auto;
+  max-width: 500px;
+  width: 100%;
+  margin: 0 auto;
 }
 
 .about__phrase,
@@ -217,29 +225,28 @@ body {
 
 /*Aboutの名前部分*/
 .about__name {
-  text-align:center;
+  text-align: center;
 }
 
 .about__introduction {
   margin: 0px auto;
 }
 
-
 /*Aboutのアイコン*/
 .about__introduction__background__icon {
-    float: left;
-    background: #fff;
-    width: 60px;
-    height:60px;
-    /* 上下中央揃え */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    text-align: center;
-    /* 枠線 */
-    border-radius: 50%;
-    border: .5px solid #6c757d;
+  float: left;
+  background: #fff;
+  width: 60px;
+  height: 60px;
+  /* 上下中央揃え */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  /* 枠線 */
+  border-radius: 50%;
+  border: 0.5px solid #6c757d;
 }
 
 .about__introduction__background__title {
@@ -261,36 +268,36 @@ body {
 
 /*メッセージ*/
 .message-bg {
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed; /* スクロールをしても画像固定 */
-    height: 200px;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed; /* スクロールをしても画像固定 */
+  height: 200px;
 }
 
 /*メッセージ(contact)*/
 .message-bg-contact {
-    background-size: cover;
-    background-position: center;
-    height: 200px;
+  background-size: cover;
+  background-position: center;
+  height: 200px;
 }
 
 .message {
-    background-color: rgba(0,0,0,0.6);
-    height: 200px;
-    /*左右上下中央揃え*/
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /*要素を縦並びにする*/
-    flex-direction: column; 
-    /* text-align: center; */
+  background-color: rgba(0, 0, 0, 0.6);
+  height: 200px;
+  /*左右上下中央揃え*/
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /*要素を縦並びにする*/
+  flex-direction: column;
+  /* text-align: center; */
 }
 
 .message p {
-    color: #fff;
-    font-weight: 900;
-    font-size:1.5rem;
-    text-align: center;
+  color: #fff;
+  font-weight: 900;
+  font-size: 1.5rem;
+  text-align: center;
 }
 
 /*
@@ -312,7 +319,7 @@ body {
   border: 1px solid #ececec;
   background: #f8f9fa;
   height: 90%;
-  box-shadow: 0 0.5rem 1rem rgba(0,0,0,.15);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
 }
 
 .services__service__menu {
@@ -327,30 +334,30 @@ body {
  */
 
 /*カルーセルのレイアウト*/
-.slider{
-    margin: 50px auto;
+.slider {
+  margin: 50px auto;
 }
 
-.slider img{
+.slider img {
   height: auto;
   width: 95%;
   margin: 15px auto;
   transition-duration: 0.5s;
-  box-shadow: 0 0.5rem 1rem rgba(0,0,0,.15);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
 }
 
 /*slick setting*/
 .slick-prev:before,
 .slick-next:before {
-    color: #000;
-    font-size:30px;
-    z-index: 2000;
+  color: #000;
+  font-size: 30px;
+  z-index: 2000;
 }
 
 .slick-prev,
 .slick-next {
-    color: #000;
-    z-index: 2000;
+  color: #000;
+  z-index: 2000;
 }
 
 .portfolios {
@@ -381,7 +388,7 @@ body {
   -webkit-transform: scale(1.1);
   transform: scale(1.1);
   transition-duration: 0.5s;
-  background: rgba(0,0,0,0.3);
+  background: rgba(0, 0, 0, 0.3);
 }
 
 .portfolio__description {
@@ -391,20 +398,20 @@ body {
 
 /* モーダルの画像 */
 .modal__body__img {
-  max-width:100%;
-  box-shadow: 0 0.5rem 1rem rgba(0,0,0,.15);
+  max-width: 100%;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
 }
 
 .modal-dialog {
   /* モーダル時の最大幅を上書き */
-  max-width: 700px!important;
+  max-width: 700px !important;
 }
 
 /*モーダルの影部分*/
 .fade {
   /*画面がmin-width以下になっても影は画面全体にかける*/
-  width: 100%!important;
-  height: 100%!important;
+  width: 100% !important;
+  height: 100% !important;
 }
 
 /*
@@ -424,10 +431,8 @@ footer {
  * -------------------------------
  */
 
-
 /* Bootstrapのmd以上の表示幅で適用されるスタイル */
 @media (min-width: 768px) {
-
   /*
    * -------------------------------
    * Top
@@ -435,18 +440,17 @@ footer {
    */
 
   .top__title {
-  font-size: 4rem;
+    font-size: 4rem;
   }
 
-  
   /* 切り替え文字のスタイル */
   .c--anim-btn span {
     padding-left: 0px;
   }
-  
+
   .c--anim-btn {
     width: 120px; /* ナビゲーションメニュー一つ一つの幅 */
-    text-align:center;
+    text-align: center;
   }
 
   /*
@@ -461,7 +465,7 @@ footer {
 
   /*Aboutの名前部分*/
   .about__name {
-    text-align:left;
+    text-align: left;
   }
 
   .about__title,
@@ -475,7 +479,7 @@ footer {
   .portfolios__phrase {
     font-size: 1.5rem;
   }
-  
+
   .image-portfolios__item {
     box-shadow: 8px 8px 12px 1px #ccc;
   }
@@ -485,7 +489,7 @@ footer {
    * メッセージ(背景画像＋黒透過)
    * -------------------------------
    */
-  
+
   /*コンテンツ*/
   .message-bg,
   .message-bg-contact {
@@ -500,9 +504,9 @@ footer {
   .message br {
     display: none;
   }
-  
+
   .message p {
-    font-size:2.0rem;
+    font-size: 2rem;
   }
 
   /*
@@ -513,7 +517,7 @@ footer {
   .services__service__menu {
     font-size: 1.5rem;
   }
-  
+
   /*
    * -------------------------------
    * Portfolios
@@ -523,29 +527,26 @@ footer {
     font-size: 1.5rem;
   }
 
-  .slider img{
+  .slider img {
     margin: 25px auto;
   }
-  
 }
 
 /* Bootstrapのmd以上の表示幅で適用されるスタイル */
 @media (min-width: 992px) {
-
   /*
    * -------------------------------
    * About
    * -------------------------------
    */
 
-    .about {
-      max-width:100%;
-    }
+  .about {
+    max-width: 100%;
+  }
 
-    .about__introduction__background__title {
-      font-size: 1.75rem;
-    }
-
+  .about__introduction__background__title {
+    font-size: 1.75rem;
+  }
 }
 
 /* 印刷用スタイル */
